unpackaged/main/default/objects/Zuora_Callout_Audit_Log__c/Zuora_Callout_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Zuora Callout Audit Log</label>
    <nameField>
        <displayFormat>ZuoraAuditLog-{000000}</displayFormat>
        <label>Zuora Callout Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zuora Callout Audit Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>