unpackaged/main/default/objects/Zuora_Callout_Audit_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zuora Callout Audit Logs</relationshipLabel>
    <relationshipName>Zuora_Callout_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>