unpackaged/main/default/objects/Zuora_Callout_Audit_Log__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zuora Rev Rec Update</fullName>
                <default>true</default>
                <label>Zuora Rev Rec Update</label>
            </value>
            <value>
                <fullName>Zuora Get Call</fullName>
            </value>
            <value>
                <fullName>Zuora Put Call</fullName>
            </value>
            <value>
                <fullName>Amend Quantity</fullName>
            </value>
            <value>
                <fullName>Renewal Amendment</fullName>
            </value>
            <value>
                <fullName>Remove Amendment</fullName>
            </value>
            <value>
                <fullName>New Product Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>