unpackaged/main/default/objects/Zuora_Callout_Audit_Log__c/fields/DateTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>DateTimeStamp__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DateTimeStamp</label>
    <type>DateTime</type>
</CustomField>