unpackaged/main/default/objects/Zuora_Callout_Audit_Log__c/fields/Raw_Json__c.field-meta.xml
<CustomField>
    <fullName>Raw_Json__c</fullName>
    <label>Raw Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>