unpackaged/main/default/objects/Zuora_Callout_Audit_Log__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Zuora Callout Audit Logs</relationshipLabel>
    <relationshipName>Zuora_Callout_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>